<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Ayurveda App</string>
    <string name="ayurveda_info">       <b>A</b>yurveda is a complete system of health. It is both preventive and curative, and originated in India thousands of years ago. It is trusted science to heal people completely (Body, soul and mind) including COVID.</string>
    <string name="ayurveda_info1"><b>8 Health Benefits of Ayurveda</b>
    Integrating Ayurveda into your life can be immensely beneficial to your overall sense of wellness, but what are some specific issues it can help with? Let’s explore eight distinct areas in which Ayurveda can improve your health:

    1. Prevention
    The traditional practice of Ayurveda is used to treat the cause as opposed to the symptom. It is therefore considered to be more preventative in nature than many other forms of medicine. Ayurveda can show you how to support your immune system and minimize the stress that often leads to imbalances and illness, getting to the root of the problem.

    2. Daily Routine
    Learning about Ayurveda can help you establish a dinacharya, or daily routine, to help you feel grounded, stable, and ready to start each day. Your daily routine might involve cleaning your tongue upon waking, practicing some yoga or meditation daily, and soothing your system periodically with a loving oil massage.

    3. Ayurvedic Diet and Food Combining
    Ayurveda has many diet and food combining suggestions to help maximize the agni, or digestive fire. Learning about your constitution and state of balance will help you determine which dietary choices are right for you.

    4. Exercise: Ayurveda and Yoga
    Certain asanas can have a cooling or heating effect on the body. Learning yoga poses from an Ayurvedic perspective is helpful for determining which poses would bring you optimal wellness.

    5. Ayurvedic Herbal Support
    Ayurveda has many insights into the world of herbal medicine. While we always encourage reaching out to a practitioner for additional guidance, discovering more about Ayurveda can help you learn more about Ayurvedic herbs, as well as which method of taking herbs is right for you.

    6. Ayurveda for Energy and Vitality
    Ayurveda’s approach to energy and vitality is multifaceted, with a special focus on adrenal health. By supporting your adrenals and finding natural sources of energy, you can stay active and doing what you love without experiencing a crash or depleting yourself afterward.

    7. Ayurveda for Beauty
    The Ayurvedic perspective on beauty focuses on the whole being, body, mind, and spirit. Ayurveda has tips for luscious hair, smooth skin, and more. Its holistic approach will leave you feeling beautiful from the inside out.

    8. Ayurveda for Sleep
    A surprising number of life’s challenges are caused by imbalanced sleep. Whether you need to sleep more or less, Ayurvedic methods can help improve your waking hours by helping you get to bed peacefully and consistently.</string>
    <string name="bn_turmeric" translatable="false">Botanical Name: "Curcuma" </string>
    <string name="turmeric_txt">Rich in phytonutrients that may protect the body by neutralizing free radicals (pollution, sunlight) and shielding the cells from damage. </string>
    <string name="tur_txt">
        1. Turmeric decoction is beautifying. female | All men mix turmeric with gram flour, cream and apply it on the face and wash it after drying. The mouth will become soft and will enhance the look.
        2.  Turmeric removes blood disorders. Blood is purified by eating it. Giving turmeric milk to a pregnant woman increases blood and heals wounds quickly.</string>
    <string name="tu_q">Who should not use turmeric? </string>
    <string name="tu_1">1. High doses of turmeric could have a blood-thinning effect; if taken on top of prescribed anticoagulants, this could increase the risk of dangerous bleeding.</string>
    <string name="tu_2">2. People with liver or bile duct problems should not take turmeric supplements, as they can increase bile production.</string>
    <string name="bn_neem" translatable="false">Botanical Name: "Azadirachta indica" </string>
    <string name="neem_txt">Neem leaf is used for leprosy, eye disorders, bloody nose, intestinal worms, stomach upset, loss of appetite, skin ulcers, diseases of the heart and blood vessels (cardiovascular disease), fever, diabetes, gum disease (gingivitis), and liver problems. The leaf is also used for birth control and to cause abortions. </string>
    <string name="bn_almond" translatable="false">Botanical Name: "Phyllanthus emblica" </string>
    <string name="almond_txt">Amla - Gooseberry is very rich in Iron, Vitamin C and Calcium </string>
    <string name="almo_txt">
        1. Almond prevent from sunburned skin.
        2. Almond helps skin brighter.
        3. They can also reduce hunger and promote weight loss.
        4. The health benefits of almonds include lower blood sugar levels, reduced blood pressure and lower cholesterol levels.</string>
    <string name="alm_txt">What happens if you eat almonds a day? </string>
    <string name="alm_1">1. Eating almonds can reduce the risk of heart disease by keeping blood vessels healthy, research from Aston University has shown.</string>
    <string name="alm_2">2. Snacking on 50g almonds every day -significantly- increases the amount of antioxidants in the bloodstream, reduces blood pressure and improves blood flow, scientists found.</string>
    <string name="alm_3" tools:ignore="TypographyDashes">3. For making Almond Cream take some 10-15 almonds and soak it in water for overnight. Remove its skin.</string>
    <string name="alm_4">4. Take all those almonds and add some rose water and grind it well with the help of grinder.</string>
    <string name="ulcer_general_info">
        Mouth ulcers are very painful. Even you cannot take a sip of water. The improper digestion, stomach infections,
        intake of Paan are the major reasons behind happening of mouth ulcers.</string>
    <string name="homemade_remedies">Some homemade remedies to get rid of mouth ulcers</string>
    <string name="remedies_1">1. You can apply glycerin on the ulcers. This helps in reducing dryness and pain. It hydrates your skin.</string>
    <string name="remedies_2">2. Allowing ice chips to melt over the ulcers or rinsing your mouth with salt water or baking soda and water may help to lessen pain.</string>
    <string name="remedies_3">3. Avoiding spicy, acidic and abrasive foods may also help.</string>
    <string name="remedies_4">4. You can apply Ghee over the ulcer which helps in softening of skin all around the ulcer and then consume coconut will also help.</string>
    <string name="remedies_5">5. You can even consume three to four leaves of Mogra tree, can also help.</string>
    <string name="ache_general_info"> </string>
    <string name="homemade_remedies10"> </string>
    <string name="remedies_10"> </string>
    <string name="remedies_20"> </string>
    <string name="remedies_30"> </string>
    <string name="remedies_40"> </string>
    <string name="remedies_50"> </string>
    <string name="diabetes_general_info">Diabetes, your body doesn\'t make enough insulin or can\'t use it as well as it should. When there isn\'t enough insulin or cells stop responding to insulin, too much blood sugar stays in your bloodstream. Over time, that can cause serious health problems, such as heart disease, vision loss, and kidney disease</string>
    <string name="homemade_remedies10000"><b>Symptoms</b>
        Feeling more thirsty than usual.
        Urinating often.Losing weight without trying.
        Presence of ketones in the urine.
        Ketones are a byproduct of the breakdown of muscle and fat that happens when there\'s not enough available insulin.
        Feeling tired and weak.
        Feeling irritable or having other mood changes.
        Having blurry vision.
        Having slow-healing sores.
        Getting a lot of infections, such as gum, skin and vaginal infections.</string>
    <string name="remedies_10000"> <b>Stress management:-</b> Stress might be the reason behind your rising blood sugar levels.</string>
    <string name="remedies_20000">Learning ways to manage stress might be of help in such conditions.</string>
    <string name="remedies_30000">Deep breathing, walking, meditation, working out, pursuing a hobby, gardening, and listening to your favourite music might be helpful to destress.</string>
    <string name="remedies_40000">Approaching a mental health counsellor and asking for help might also be a good first step towards coping with stress better.</string>
    <string name="remedies_50000">Therefore, you should discuss this with your doctor and reach a proper conclusion regarding methods of stress management.</string>
    <string name="thyroid_general_info">The thyroid is a small, butterfly-shaped gland located at the base of the neck, just below the Adam\'s apple. The thyroid gland makes two main hormones: thyroxine (T-4) and triiodothyronine (T-3). These hormones affect every cell in the body. They support the rate at which the body uses fats and carbohydrates.</string>
    <string name="homemade_remedies100000"> <b>Symptoms</b>
        Tiredness.
        More sensitivity to cold.
        Constipation.
        Dry skin.
        Weight gain.
        Puffy face.
        Hoarse voice.
        Coarse hair and skin.
        Muscle weakness.
        Muscle aches, tenderness and stiffness.
        Menstrual cycles that are heavier than usual or irregular.
        Thinning hair.
        Slowed heart rate,also called bradycardia.
        Depression.
        Memory problems</string>
    <string name="remedies_100000">Coconut Oil:-
Coconut oil has medium-chain fatty acids that help in better functioning of the thyroid gland.</string>
    <string name="remedies_200000">Coconut oil, specifically when taken in a non-heated form, helps lose weight, increases metabolism and balances body temperature.</string>
    <string name="remedies_300000">Apple Cider Vinegar:-
Apple cider vinegar helps in the balanced production and expression of hormones.</string>
    <string name="remedies_400000">It improves metabolism and helps to alkalize the body environment.
Apple cider vinegar helps regulate body fats, wash away toxins from the body, and absorption of nutrients.</string>
    <string name="remedies_500000">Dairy Products:-
Milk, cheese, and yoghurt are very beneficial for the thyroid as they are high in iodine, the mineral that is essential for proper thyroid functioning. Consuming dairy products will also help with increasing vitamin levels which in turn will help with thyroid problems.</string>
    <string name="heart_and_brain">BEST FOODS FOR HEART AND BRAIN</string>
    <string name="hb_0">Taking care of your brain may be as simple as eating the right foods, and consuming proper amounts of vitamins and other nutrients to support your heart, brain and muscles, too. Consistent exercise and other regular healthy habits (sound sleep) will help bolster your brain, too.</string>
    <string name="hb_1"><b>1. Papaya</b>
        It contains Beta-carotene, beta-cryptoxanthin, lutein (carotenoids); Vitamins C and E; folate; calcium; magnesium; potassium. Once or twice a week is beneficial eaten fresh, but don’t use papaya supplements.</string>
    <string name="hb_2"><b>2. Amla – Indian Gooseberries</b>
        Beta- and alpha-carotene, lutein (carotenoids); vitamin C; potassium; folate; fiber. Add amla powder into your routine dishes.</string>
    <string name="hb_6"><b>Conclusion</b>
    Healthy eating for a strong heart beating. </string>
</resources>